--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MathPrereq — Frontend</title>
+    <title>KnowliHUB - AI Math Bot</title>
   </head>
   <body>
     <div id="root"></div>
